#5090 The Panel Add Question popup appears behind the question Fixes #5090

--- a/packages/survey-creator-core/src/components/question.scss
+++ b/packages/survey-creator-core/src/components/question.scss
@@ -517,10 +517,6 @@ svc-question,
   }
 }
 
-.svc-panel__add-new-question-container {
-  container-type: inline-size;
-}
-
 .svc-panel__placeholder_frame-wrapper {
   container-type: inline-size;
   width: 100%;
